<resources>
    <string name="app_name">Credenager</string>
    <string name="welcome">Welcome</string>
    <string name="tagline">Encrypted Credentials Manager</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="loading_status">Loading…</string>
    <string name="email_edittext_hint">Email</string>
    <string name="password_edittext_hint">Password</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="auth_form_or_sep">OR</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="signup_instead_link">Signup Instead?</string>
    <string name="authentication_image_hint">Authentication</string>
    <string name="key_edittext_hint">Encryption Key</string>
    <string name="same_as_password_checkbox">Same as password?</string>
    <string name="login_instead_link">Login Instead?</string>
    <string name="key_note">Note: Key can never be changed or recovered.</string>
    <string name="validate">Validate</string>
    <string name="forgot_key_link">Forgot Key?</string>
    <string name="key_logout_link">Logout?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_image_hint">Reset Password</string>
    <string name="otp_edittext_hint">OTP</string>
    <string name="request_otp">Request Otp</string>
    <string name="reset_key">Reset Key</string>
    <string name="reset_key_warning">I accept, that all my data will be wiped out as the key is non-recoverable!</string>
    <string name="current_password_edittext_hint">Current Password</string>
    <string name="new_encryption_key_edittext_hint">New Encryption Key</string>
    <string name="add_group">Add Group</string>
    <string name="add_credential">Add Credential</string>
    <string name="add_item">Add Item</string>
    <string name="cred_dialog_identifier">Title</string>
    <string name="cred_dialog__credential">Credential</string>
    <string name="group_name">Group Name</string>
    <string name="cred_card_copy">cred_card_copy</string>
    <string name="cred_card_lock">Cred_card_lock</string>
    <string name="cred_card_delete">cred_card_delete</string>
    <string name="cred_card_edit">cred_card_edit</string>
    <string name="divider">divider</string>
    <string name="menu">Menu</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="delete_group">Delete Group</string>
    <string name="empty_group">Group Empty!</string>
    <string name="empty_home">Tap on \"+\" icon to add credentials</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_back_button">settings back button</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="offline_mode_desc">Allow access to credentials when offline</string>
    <string name="offline_setting_icon">Offline Setting Icon</string>
    <string name="change_pass_icon">Change Pass Icon</string>
    <string name="change_pass">Change Password</string>
    <string name="change_pass_desc">Change your account password</string>
    <string name="right_icon">Right Icon</string>
    <string name="delete_account_icon">delete account_icon</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_desc">Delete your account permanently deleting all credentials</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Logout from this device</string>
    <string name="change_password">Change Password</string>
    <string name="new_password_edittext_hint">New Password</string>
    <string name="change">Change</string>
    <string name="delete_acc_warning">I accept, that this step is irreversible and all my data will be permanently deleted!
    </string>
    <string name="delete">Delete</string>
    <string name="github_icon">Github Icon</string>
    <string name="github">Github</string>
    <string name="github_desc">View project source code</string>
    <string name="bypass_key_setting_icon">Bypass Key Setting Icon</string>
    <string name="bypass_key_page">Bypass Key Page</string>
    <string name="bypass_key_page_desc">Only ask for the key periodically</string>
    <string name="biometric_setting_icon">Biometric Setting icon</string>
    <string name="allow_biometric_authentication">Allow Biometric Authentication</string>
    <string name="allow_biometric_authentication_desc">Allow biometric authentication on the key page; Will ask for the key periodically</string>
</resources>