<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@drawable/rounded_dialog"
        android:layout_marginHorizontal="20dp"
        android:scaleX="0"
        android:scaleY="0"
        android:id="@+id/delete_acc_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/delete_acc_dialog_heading"
              android:text="@string/delete_account"
              android:textSize="30sp"
              android:textFontWeight="600"
              android:layout_gravity="center"
              android:textColor="@color/heading1"
              android:layout_marginVertical="30dp"
              android:layout_marginHorizontal="20dp"
              tools:targetApi="p"/>

    <EditText
            android:id="@+id/delete_acc_dialog_pass_edittext"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/password_edittext_hint"
            android:textColorHint="@color/statusText"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textFontWeight="600"
            android:maxLines="1"
            android:textColor="@color/heading2"
            android:background="@drawable/rounded_edittext"
            android:imeOptions="actionNext"
            tools:targetApi="p"/>

    <EditText
            android:id="@+id/delete_acc_dialog_key_edittext"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/key_edittext_hint"
            android:textColorHint="@color/statusText"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textFontWeight="600"
            android:maxLines="1"
            android:textColor="@color/heading2"
            android:background="@drawable/rounded_edittext"
            android:imeOptions="actionDone"
            tools:targetApi="p"/>

    <CheckBox
            android:id="@+id/delete_acc_confirm_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/delete_acc_warning"
            android:textColor="@color/statusText"
            android:textSize="15sp"
            android:textFontWeight="600"
            android:checked="false"
            android:buttonTint="@color/button_primary"
            tools:targetApi="p"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/delete_acc_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="15dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            app:backgroundTint="@color/button_primary"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:outlineSpotShadowColor="@android:color/transparent"
            tools:targetApi="p"
            android:enabled="false"
            android:alpha="0.3"
    />
</LinearLayout>
