<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal" tools:ignore="UseCompoundDrawables">
            <LinearLayout
                    android:visibility="invisible"
                          android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:id="@+id/welcome_top">
                <ImageView android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginHorizontal="20dp"
                           android:layout_marginTop="20dp"
                           android:layout_marginBottom="50dp"
                           android:scaleType="centerCrop"
                           android:adjustViewBounds="true"
                           android:src="@drawable/ic_welcome"
                           android:id="@+id/header_image"
                           android:contentDescription="@string/welcome"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="30sp"
                          android:textFontWeight="600"
                          android:text="@string/app_name"
                          android:textColor="@color/heading1"
                          android:layout_marginHorizontal="20dp"
                          android:layout_marginBottom="10dp"
                          tools:targetApi="p"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="15sp"
                          android:textFontWeight="600"
                          android:text="@string/tagline"
                          android:textColor="@color/heading2"
                          android:textAlignment="center"
                          android:layout_marginHorizontal="20dp"
                          android:layout_marginBottom="50dp"
                          tools:targetApi="p"/>
            </LinearLayout>
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="20dp"
                    app:backgroundTint="@color/button_primary"
                    android:text="@string/login"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    tools:targetApi="p"
            />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/register_button"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/heading2"
                    android:layout_marginHorizontal="20dp"
                    app:backgroundTint="@color/button_secondary"
                    android:text="@string/signup"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    tools:targetApi="p"
            />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>